FEAT:update table data

--- a/index.html
+++ b/index.html
@@ -4088,7 +4088,7 @@
                   <tbody class="roo55">
                     <tr class="">
                       <td class="roo278">
-                        <span class="roo277 roo278">Retro Tapes</span>
+                        <span class="roo277 roo278">Roulette</span>
                       </td>
                       <td class="roo273 roo283 roo58 roo274">
                         <span class="roo277">Hidden</span>
@@ -4098,7 +4098,8 @@
 </td>
                       <td class="roo282 roo57">
                         <span class="roo277"
-                          >$2000.00
+                          >$50.00
+
                           <img
                             alt="crypto"
                             class="roo275"
@@ -4106,11 +4107,11 @@
                         /></span>
                       </td>
                       <td class="roo282 roo58 roo276">
-                        <span class="roo277">0.10x</span>
+                        <span class="roo277">0.00x</span>
                       </td>
                       <td class="roo57 roo276">
                         <span class="roo277"
-                          >$20.45
+                          >$0.00
                           <img
                             alt="crypto"
                             class="roo275"
@@ -4120,17 +4121,17 @@
                     </tr>
                     <tr class="roo284">
                       <td class="roo278">
-                        <span class="roo277 roo278">crash</span>
+                        <span class="roo277 roo278">Speed Baccarat A</span>
                       </td>
                       <td class="roo273 roo283 roo58 roo274">
-                        <span class="roo277">Hidden</span>
+                        <span class="roo277">Sk879519</span>
                       </td>
                       <td class="roo282 roo58">
   <span class="roo277 currentTime"></span>
 </td>
                       <td class="roo282 roo57">
                         <span class="roo277"
-                          >$20.00
+                          >$1200.00
                           <img
                             alt="cash"
                             class="roo275"
@@ -4138,7 +4139,7 @@
                         /></span>
                       </td>
                       <td class="roo282 roo58">
-                        <span class="roo277">0.00x</span>
+                        <span class="roo277">2.31x</span>
                       </td>
                       <td class="roo57">
                         <span class="roo277"
@@ -4152,17 +4153,17 @@
                     </tr>
                     <tr class="">
                       <td class="roo278">
-                        <span class="roo277 roo278">crash</span>
+                        <span class="roo277 roo278">Wanted Dead Or A...</span>
                       </td>
                       <td class="roo273 roo283 roo58 roo274">
-                        <span class="roo277">Hidden</span>
+                        <span class="roo277">dannoboik</span>
                       </td>
                       <td class="roo282 roo58">
   <span class="roo277 currentTime"></span>
 </td>
                       <td class="roo282 roo57">
                         <span class="roo277"
-                          >$111.80
+                          >$32.80
                           <img
                             alt="cash"
                             class="roo275"
@@ -4170,11 +4171,11 @@
                         /></span>
                       </td>
                       <td class="roo282 roo58">
-                        <span class="roo277">0.00x</span>
+                        <span class="roo277">2.60x</span>
                       </td>
                       <td class="roo57">
                         <span class="roo277"
-                          >$0.00
+                          >$84.00
                           <img
                             alt="cash"
                             class="roo275"
@@ -4184,14 +4185,14 @@
                     </tr>
                     <tr class="roo284">
                       <td class="roo278">
-                        <span class="roo277 roo278">Razor Returns</span>
+                        <span class="roo277 roo278">Plinko</span>
                       </td>
                       <td class="roo273 roo283 roo58">
                         <span class="roo277"
                           ><a
                             class="MuiTypography-root MuiLink-root MuiLink-underlineNone roo285 roo280 MuiTypography-colorPrimary"
                             href="index_1.html"
-                            ><span class="">tramadol888</span></a
+                            ><span class="">Hidden</span></a
                           ></span
                         >
                       </td>
@@ -4200,7 +4201,7 @@
 </td>
                       <td class="roo282 roo57">
                         <span class="roo277"
-                          >$250.00
+                          >$50.00
                           <img
                             alt="eth"
                             class="roo275"
@@ -4208,7 +4209,7 @@
                         /></span>
                       </td>
                       <td class="roo282 roo58 roo276">
-                        <span class="roo277">0.66x</span>
+                        <span class="roo277">2.66x</span>
                       </td>
                       <td class="roo57 roo276">
                         <span class="roo277"
@@ -4222,14 +4223,14 @@
                     </tr>
                     <tr class="">
                       <td class="roo278">
-                        <span class="roo277 roo278">crash</span>
+                        <span class="roo277 roo278">Speed Baccarat 3</span>
                       </td>
                       <td class="roo273 roo283 roo58">
                         <span class="roo277"
                           ><a
                             class="MuiTypography-root MuiLink-root MuiLink-underlineNone roo285 roo280 MuiTypography-colorPrimary"
                             href="index_2.html"
-                            ><span class="">duchee</span></a
+                            ><span class="">Rooolette</span></a
                           ></span
                         >
                       </td>
@@ -4250,7 +4251,7 @@
                       </td>
                       <td class="roo57 roo276">
                         <span class="roo277"
-                          >$7.31
+                          >$17.31
                           <img
                             alt="cash"
                             class="roo275"
@@ -4260,14 +4261,14 @@
                     </tr>
                     <tr class="roo284">
                       <td class="roo278">
-                        <span class="roo277 roo278">dice</span>
+                        <span class="roo277 roo278">Plinko</span>
                       </td>
                       <td class="roo273 roo283 roo58">
                         <span class="roo277"
                           ><a
                             class="MuiTypography-root MuiLink-root MuiLink-underlineNone roo285 roo280 MuiTypography-colorPrimary"
                             href="index_3.html"
-                            ><span class="">Treywaybaby</span></a
+                            ><span class="">shakuntalajain2</span></a
                           ></span
                         >
                       </td>
@@ -4284,11 +4285,11 @@
                         /></span>
                       </td>
                       <td class="roo282 roo58">
-                        <span class="roo277">0.00x</span>
+                        <span class="roo277">0.20x</span>
                       </td>
                       <td class="roo57">
                         <span class="roo277"
-                          >$0.00
+                          >$8.00
                           <img
                             alt="cash"
                             class="roo275"
@@ -4298,7 +4299,7 @@
                     </tr>
                     <tr class="">
                       <td class="roo278">
-                        <span class="roo277 roo278">Holly Jolly Bonanza</span>
+                        <span class="roo277 roo278">Gems Bonanza</span>
                       </td>
                       <td class="roo273 roo283 roo58 roo274">
                         <span class="roo277">Hidden</span>
@@ -4316,7 +4317,7 @@
                         /></span>
                       </td>
                       <td class="roo282 roo58 roo276">
-                        <span class="roo277">0.02x</span>
+                        <span class="roo277">5000.02x</span>
                       </td>
                       <td class="roo57 roo276">
                         <span class="roo277"
@@ -4330,7 +4331,7 @@
                     </tr>
                     <tr class="roo284">
                       <td class="roo278">
-                        <span class="roo277 roo278">dice</span>
+                        <span class="roo277 roo278">Crazy Time</span>
                       </td>
                       <td class="roo273 roo283 roo58 roo274">
                         <span class="roo277">Hidden</span>
@@ -4394,7 +4395,7 @@
                     </tr>
                     <tr class="roo284">
                       <td class="roo278">
-                        <span class="roo277 roo278">dice</span>
+                        <span class="roo277 roo278">The Dog House Mul...</span>
                       </td>
                       <td class="roo273 roo283 roo58 roo274">
                         <span class="roo277">Hidden</span>
@@ -4433,7 +4434,7 @@
                           ><a
                             class="MuiTypography-root MuiLink-root MuiLink-underlineNone roo285 roo280 MuiTypography-colorPrimary"
                             href="index_4.html"
-                            ><span class="">Hesnyde</span></a
+                            ><span class="">Sweet Bonanza</span></a
                           ></span
                         >
                       </td>
@@ -5983,16 +5984,11 @@
     
   }
 
-  // Update the table data every 5 seconds (you can adjust the interval as needed)
   setInterval(updateTableData, 2000);
 </script>
 
 
 
-
-<!-- Your existing HTML code for tabs and table -->
-
-<!-- Add the following script at the end of your body -->
 <script>
   function getRandomValue(array) {
     return array[Math.floor(Math.random() * array.length)];
@@ -6000,73 +5996,57 @@
 
   function updateTableData() {
     // Sample data for Kullanıcı, Bahis, and Oyun
-    const kullaniciData = ['Hidden', 'User1', 'User2', 'User3', 'User4'];
+    const kullaniciData = ['Muertos Multiplier', 'Roobet First Person', 'Mines', 'Wanted Dead Or A ...' ,"XWays" ,'Rooolette'];
     const bahisData = ['$10.00', '$20.00', '$30.00', '$40.00', '$50.00'];
     const oyunData = ['Retro Tapes', 'crash', 'dice', 'Holly Jolly Bonanza', 'Roulette Live'];
 
-    // Select all relevant elements in the table
+ 
     const rows = document.querySelectorAll('.roo55 tr');
 
     rows.forEach(row => {
-      // Get the existing data of each element
       const previousKullanici = row.querySelector('.roo283 .roo277').textContent;
       const previousBahis = row.querySelector('.roo57 .roo277').textContent;
       const previousOyun = row.querySelector('.roo278 .roo277').textContent;
 
-      // Get new random data
       const newKullanici = getRandomValue(kullaniciData);
       const newBahis = getRandomValue(bahisData);
       const newOyun = getRandomValue(oyunData);
 
-      // Update the content of each element with new data
       row.querySelector('.roo283 .roo277').textContent = newKullanici;
       row.querySelector('.roo57 .roo277').textContent = newBahis;
       row.querySelector('.roo278 .roo277').textContent = newOyun;
 
-      // Randomly decide whether to apply background color
       const applyBackgroundColor = Math.random() < 0.5;
 
-      // Check if the data has changed and apply background color if yes
       if (
         (previousKullanici !== newKullanici || previousBahis !== newBahis || previousOyun !== newOyun) &&
         applyBackgroundColor
       ) {
-        // Set the background color to the specific color (#353260)
         row.style.backgroundColor = '#353260';
       } else {
-        // Reset background color if data hasn't changed or random condition not met
         row.style.backgroundColor = '';
       }
     });
   }
 
-  // Update the table data every 5 seconds (you can adjust the interval as needed)
   setInterval(updateTableData, 3000);
 </script>
 
 
 <script>
-  // Get all elements with the class "currentTime"
   var elements = document.querySelectorAll('.currentTime');
 
-  // Iterate over each element and set the current time
   elements.forEach(function(element) {
-    // Get the current date and time
     var currentDate = new Date();
-
-    // Get the hours, minutes, and AM/PM
     var hours = currentDate.getHours();
     var minutes = currentDate.getMinutes();
     var ampm = hours >= 12 ? 'PM' : 'AM';
 
-    // Convert hours to 12-hour format
     hours = hours % 12;
     hours = hours ? hours : 12; // the hour '0' should be '12'
 
-    // Pad single digit minutes with a leading zero
     minutes = minutes < 10 ? '0' + minutes : minutes;
 
-    // Set the formatted time in the current element
     element.innerHTML = hours + ':' + minutes + ' ' + ampm;
   });
 </script>
