Feat:script update

--- a/index.html
+++ b/index.html
@@ -3919,7 +3919,7 @@
             </div>
             <!-- Table section start -->
             <div class="roo49"> 
-              <div class="roo50">
+              <div class="roo50" style="height: 500px; overflow: hidden;">
                 <div class="roo51">
                   <div class="MuiTabs-root">
                     <div
@@ -4056,7 +4056,7 @@
                           /></span>
                         </td>
                       </tr>
-<tr >
+                     <tr >
                         <td class="roo278">
                           <span class="roo277 roo278">Wanted Dead Or A...</span>
                         </td>
