Feat:Register page

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         tabindex="0"
                         target="_blank"
                         >
-                        <a href="https://rebrand.ly/roobet-register" style="text-decoration: none; color: inherit;">
+                        <a href="./Register.html" style="text-decoration: none; color: inherit;">
                         <span class="MuiButton-label">Kaydol</span>
                         <span class="MuiTouchRipple-root"></span>
                         </a>
