Feat:Add login page

--- a/login.html
+++ b/login.html
@@ -34,38 +34,10 @@
       <!-- navbar end -->
       <!-- form section start  -->
       <div class="mainContainer">
-        <div class="imageDiv">
+        <div class="imageDiv1">
           <p></p>
         </div>
         <div class="firstDiv">
-          <!-- navbar start -->
-          <!-- <div class="navbar">
-        <div>
-          <img
-            src="./images/logo.svg"
-            alt="logo"
-            width="189px"
-            height="49px"
-            class="logo"
-          />
-        </div>
-        <div>
-          <svg
-            width="12"
-            height="12"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-            role="img"
-            class="roo794"
-          >
-            <path
-              d="M1.652 9.18a.549.549 0 0 0 .762 0l3.25-3.258 3.257 3.257a.54.54 0 0 0 .756 0 .54.54 0 0 0 0-.756L6.42 5.165l3.257-3.25a.543.543 0 0 0 0-.763.553.553 0 0 0-.756 0L5.664 4.409l-3.25-3.257a.555.555 0 0 0-.762 0 .562.562 0 0 0 0 .763l3.256 3.25-3.256 3.258a.547.547 0 0 0 0 .756Z"
-              fill="#fff"
-              stroke="#fff"
-            ></path>
-          </svg>
-        </div>
-      </div> -->
           <div class="roo607 roo1046">
             <img
               class="roo656 roo598 roo1037"
@@ -95,10 +67,10 @@
           <div class="formParent">
             <div class="formWrapper">
               <div class="innerWrapper">
-                <p class="heading font">Create your account</p>
+                <p class="heading font">Login to your account</p>
                 <div class="loginWrapper">
-                  <p class="title font">Already have an account?</p>
-                  <a href="./login.html" class="login">Login</a>
+                  <p class="title font">Don't have an account?</p>
+                  <a href="./Register.html" class="login">Register</a>
                 </div>
               </div>
 
@@ -107,7 +79,7 @@
                 <p
                   class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-qxat7i"
                 >
-                  Username
+                  Username or Email
                 </p>
                 <div
                   required=""
@@ -118,7 +90,7 @@
                     autocomplete="username"
                     id="auth-dialog-username"
                     name="username"
-                    placeholder="Username"
+                    placeholder="Username or Email"
                     required=""
                     type="text"
                     class="MuiInputBase-input MuiOutlinedInput-input css-so2qui"
@@ -143,89 +115,6 @@
                   ></div>
                 </div>
               </div>
-              <!-- email -->
-              <div class="css-oeyxfx gap">
-                <p
-                  class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-qxat7i"
-                >
-                  Email Address
-                </p>
-                <div
-                  required=""
-                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorSecondary MuiInputBase-fullWidth css-117165x"
-                >
-                  <input
-                    aria-invalid="false"
-                    autocomplete="emailaddress"
-                    id="auth-dialog-emailaddress"
-                    name="emailaddress"
-                    placeholder="Email Address"
-                    required=""
-                    type="text"
-                    class="MuiInputBase-input MuiOutlinedInput-input css-so2qui"
-                    value=""
-                  />
-                  <fieldset
-                    aria-hidden="true"
-                    class="MuiOutlinedInput-notchedOutline css-igs3ac"
-                  >
-                    <legend class="css-ihdtdm">
-                      <span class="notranslate">​</span>
-                    </legend>
-                  </fieldset>
-                  <div
-                    data-lastpass-icon-root="true"
-                    style="
-                      position: relative !important;
-                      height: 0px !important;
-                      width: 0px !important;
-                      float: left !important;
-                    "
-                  ></div>
-                </div>
-              </div>
-              <!-- phone number -->
-              <div class="css-oeyxfx gap">
-                <p
-                  class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-qxat7i"
-                >
-                  Phone Number
-                </p>
-                <div
-                  required=""
-                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorSecondary MuiInputBase-fullWidth css-117165x"
-                >
-                  <input
-                    aria-invalid="false"
-                    autocomplete="Phone Number"
-                    id="auth-dialog-PhoneNumber"
-                    name="username"
-                    placeholder="Phone Number"
-                    required=""
-                    type="text"
-                    class="MuiInputBase-input MuiOutlinedInput-input css-so2qui"
-                    value=""
-                  />
-                  <fieldset
-                    aria-hidden="true"
-                    class="MuiOutlinedInput-notchedOutline css-igs3ac"
-                  >
-                    <legend class="css-ihdtdm">
-                      <span class="notranslate">​</span>
-                    </legend>
-                  </fieldset>
-                  <div
-                    data-lastpass-icon-root="true"
-                    style="
-                      position: relative !important;
-                      height: 0px !important;
-                      width: 0px !important;
-                      float: left !important;
-                    "
-                  ></div>
-                </div>
-              </div>
-              <!-- password -->
               <div class="css-oeyxfx gap">
                 <p
                   class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-qxat7i"
@@ -295,82 +184,6 @@
                   >
                 </p>
               </div>
-              <!-- check boxex -->
-              <div class="roo398">
-                <label class="MuiFormControlLabel-root-562 roo399">
-                  <span
-                    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary css-r8pegv"
-                    widthandheight="20"
-                  >
-                    <input
-                      class="PrivateSwitchBase-input css-1m9pwf3"
-                      name="age"
-                      required=""
-                      type="checkbox"
-                      data-indeterminate="false"
-                      checked
-                    />
-                    <div
-                      id="checkbox-border"
-                      font-size="medium"
-                      class="css-ze3sig"
-                    ></div>
-                  </span>
-                  <span
-                    class="MuiTypography-root-523 MuiFormControlLabel-label-566 MuiTypography-body1-525"
-                  >
-                    <div class="roo400 font">
-                      I confirm I am 18 years or older, located in a permitted
-                      territory, and have no self-exclusions
-                    </div>
-                  </span>
-                </label>
-                <label class="MuiFormControlLabel-root-562 roo399">
-                  <span
-                    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary css-r8pegv"
-                    widthandheight="20"
-                  >
-                    <input
-                      class="PrivateSwitchBase-input css-1m9pwf3"
-                      name="tos"
-                      required=""
-                      type="checkbox"
-                      data-indeterminate="false"
-                      checked
-                    />
-                    <div
-                      id="checkbox-border"
-                      font-size="medium"
-                      class="css-ze3sig"
-                    ></div>
-                  </span>
-                  <span
-                    class="MuiTypography-root-523 MuiFormControlLabel-label-566 MuiTypography-body1-525 font"
-                  >
-                    <div class="roo400">
-                      I have read and accept the
-                      <a
-                        class="MuiTypography-root-523 MuiLink-root-518 MuiLink-underlineHover-520 roo397 MuiTypography-colorPrimary-546 font"
-                        target="_blank"
-                        href="#"
-                        >Terms of Service</a
-                      >,
-                      <a
-                        class="MuiTypography-root-523 MuiLink-root-518 MuiLink-underlineHover-520 roo397 MuiTypography-colorPrimary-546 font"
-                        target="_blank"
-                        href="#"
-                        >Privacy Policy</a
-                      >,
-                      <a
-                        class="MuiTypography-root-523 MuiLink-root-518 MuiLink-underlineHover-520 roo397 MuiTypography-colorPrimary-546 font"
-                        target="_blank"
-                        href="#"
-                        >Responsible Gambling Policy</a
-                      >, and all associated policies
-                    </div>
-                  </span>
-                </label>
-              </div>
 
               <!-- button -->
               <div class="roo604">
@@ -399,6 +212,8 @@
 
             <!-- form end here  -->
           </div>
+          <div></div>
+          <div></div>
         </div>
       </div>
     </div>
