--- a/Register.html
+++ b/Register.html
@@ -38,43 +38,16 @@
           <p></p>
         </div>
         <div class="firstDiv">
-          <!-- navbar start -->
-          <!-- <div class="navbar">
-        <div>
-          <img
-            src="./images/logo.svg"
-            alt="logo"
-            width="189px"
-            height="49px"
-            class="logo"
-          />
-        </div>
-        <div>
-          <svg
-            width="12"
-            height="12"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-            role="img"
-            class="roo794"
-          >
-            <path
-              d="M1.652 9.18a.549.549 0 0 0 .762 0l3.25-3.258 3.257 3.257a.54.54 0 0 0 .756 0 .54.54 0 0 0 0-.756L6.42 5.165l3.257-3.25a.543.543 0 0 0 0-.763.553.553 0 0 0-.756 0L5.664 4.409l-3.25-3.257a.555.555 0 0 0-.762 0 .562.562 0 0 0 0 .763l3.256 3.25-3.256 3.258a.547.547 0 0 0 0 .756Z"
-              fill="#fff"
-              stroke="#fff"
-            ></path>
-          </svg>
-        </div>
-      </div> -->
+          
           <div class="roo607 roo1046">
             <img
               class="roo656 roo598 roo1037"
               alt="Roobet"
               src="https://roobet.com/assets/images/logo.3b4100ae75b74cbe8869.svg"
-            /><button
+            /><a
+            href="./index.html"
               class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium roo608 css-19g6n4d roo1047"
-              tabindex="0"
-              type="button"
+              
             >
               <svg
                 width="12"
@@ -90,7 +63,7 @@
                   stroke="#fff"
                 ></path>
               </svg>
-            </button>
+            </a>
           </div>
           <div class="formParent">
             <div class="formWrapper">
