--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                       target="_blank"
                     >
                       <a
-                        href="https://rebrand.ly/roobet-login"
+                        href="./login.html"
                         style="text-decoration: none; color: inherit"
                       >
                         <span class="MuiButton-label">Giriş</span>
