--- a/login.html
+++ b/login.html
@@ -43,10 +43,10 @@
               class="roo656 roo598 roo1037"
               alt="Roobet"
               src="https://roobet.com/assets/images/logo.3b4100ae75b74cbe8869.svg"
-            /><button
+            /><a
+              href="./index.html"
               class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium roo608 css-19g6n4d roo1047"
-              tabindex="0"
-              type="button"
+              
             >
               <svg
                 width="12"
@@ -62,7 +62,7 @@
                   stroke="#fff"
                 ></path>
               </svg>
-            </button>
+            </a>
           </div>
           <div class="formParent">
             <div class="formWrapper">
