--- a/Register.html
+++ b/Register.html
@@ -34,20 +34,16 @@
       <!-- navbar end -->
       <!-- form section start  -->
       <div class="mainContainer">
-        <div class="imageDiv">
-          <p></p>
-        </div>
+        <div class="imageDiv"></div>
         <div class="firstDiv">
-          
           <div class="roo607 roo1046">
             <img
               class="roo656 roo598 roo1037"
               alt="Roobet"
               src="https://roobet.com/assets/images/logo.3b4100ae75b74cbe8869.svg"
             /><a
-            href="./index.html"
+              href="./index.html"
               class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium roo608 css-19g6n4d roo1047"
-              
             >
               <svg
                 width="12"
@@ -358,6 +354,11 @@
                   <p
                     class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-13y91uw"
                     id="button-text font"
+                    style="
+                      -webkit-text-fill-color: white;
+                      -webkit-text-stroke-width: 1px;
+                      -webkit-text-stroke: rgb(197, 106, 24);
+                    "
                   >
                     Play Now
                   </p>
