:Fix:path changes

--- a/Register.html
+++ b/Register.html
@@ -40,7 +40,7 @@
             <img
               class="roo656 roo598 roo1037"
               alt="Roobet"
-              src="https://roobet.com/assets/images/logo.3b4100ae75b74cbe8869.svg"
+              src="./images//logo.svg"
             /><a
               href="./index.html"
               class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium roo608 css-19g6n4d roo1047"
@@ -74,7 +74,7 @@
               <!-- inputs fields -->
               <div class="css-oeyxfx gap">
                 <p
-                  class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-qxat7i"
+                  class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-qxat7i font"
                 >
                   Username
                 </p>
@@ -90,7 +90,7 @@
                     placeholder="Username"
                     required=""
                     type="text"
-                    class="MuiInputBase-input MuiOutlinedInput-input css-so2qui"
+                    class="MuiInputBase-input MuiOutlinedInput-input css-so2qui font"
                     value=""
                   />
                   <fieldset
@@ -115,7 +115,7 @@
               <!-- email -->
               <div class="css-oeyxfx gap">
                 <p
-                  class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-qxat7i"
+                  class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-qxat7i font"
                 >
                   Email Address
                 </p>
@@ -131,7 +131,7 @@
                     placeholder="Email Address"
                     required=""
                     type="text"
-                    class="MuiInputBase-input MuiOutlinedInput-input css-so2qui"
+                    class="MuiInputBase-input MuiOutlinedInput-input css-so2qui font"
                     value=""
                   />
                   <fieldset
@@ -156,7 +156,7 @@
               <!-- phone number -->
               <div class="css-oeyxfx gap">
                 <p
-                  class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-qxat7i"
+                  class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-qxat7i font"
                 >
                   Phone Number
                 </p>
@@ -172,7 +172,7 @@
                     placeholder="Phone Number"
                     required=""
                     type="text"
-                    class="MuiInputBase-input MuiOutlinedInput-input css-so2qui"
+                    class="MuiInputBase-input MuiOutlinedInput-input css-so2qui font"
                     value=""
                   />
                   <fieldset
@@ -197,7 +197,7 @@
               <!-- password -->
               <div class="css-oeyxfx gap">
                 <p
-                  class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-qxat7i"
+                  class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-qxat7i font"
                 >
                   Password
                 </p>
@@ -213,11 +213,11 @@
                     placeholder="Password"
                     required=""
                     type="password"
-                    class="MuiInputBase-input css-so2qui1"
+                    class="MuiInputBase-input css-so2qui1 font"
                     value=""
                   />
                   <button
-                    class="MuiButtonBase-root-561 MuiIconButton-root-553 roo424 roo435 MuiIconButton-sizeSmall-559"
+                    class="MuiButtonBase-root-561 MuiIconButton-root-553 roo424 roo435 MuiIconButton-sizeSmall-559 font"
                     tabindex="0"
                     type="button"
                     aria-label="Toggle Password Visibility"
@@ -259,7 +259,7 @@
                 </div>
                 <p class="MuiFormHelperText-root css-18mv6zn">
                   <span
-                    class="MuiTypography-root MuiTypography-body4 css-137v72e"
+                    class="MuiTypography-root MuiTypography-body4 css-137v72e font"
                     >Password must be at least 7 characters</span
                   >
                 </p>
@@ -317,7 +317,7 @@
                   <span
                     class="MuiTypography-root-523 MuiFormControlLabel-label-566 MuiTypography-body1-525 font"
                   >
-                    <div class="roo400">
+                    <div class="roo400 font">
                       I have read and accept the
                       <a
                         class="MuiTypography-root-523 MuiLink-root-518 MuiLink-underlineHover-520 roo397 MuiTypography-colorPrimary-546 font"
