--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
             <img
               class="roo656 roo598 roo1037"
               alt="Roobet"
-              src="https://roobet.com/assets/images/logo.3b4100ae75b74cbe8869.svg"
+              src="./images//logo.svg"
             /><a
               href="./index.html"
               class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium roo608 css-19g6n4d roo1047"
