--- a/Register.html
+++ b/Register.html
@@ -278,7 +278,7 @@
                 <label class="MuiFormControlLabel-root-562 roo399">
                
                   <label class="container">
-                    <input type="checkbox" checked="">
+                    <input type="checkbox" checked="checked">
                     <span class="checkmark"></span>
                   </label>
                   <span
@@ -292,7 +292,7 @@
                 </label>
                 <label class="MuiFormControlLabel-root-562 roo399">
                   <label class="container">
-                    <input type="checkbox" checked="">
+                    <input type="checkbox" checked="checked">
                     <span class="checkmark"></span>
                   </label>
                   <span
